--- a/code/server_software/tonight_server/README.rdoc
+++ b/code/server_software/tonight_server/README.rdoc
@@ -1,28 +1,3 @@
-== README
+== Tonight Server
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is the main server element of the major project. It has three main elements, pulling data from various API's, learning from this data and serving the data via an API. 
