Updated and added stuff

--- a/docs/LaTeX/acknowledgements.tex
+++ b/docs/LaTeX/acknowledgements.tex
@@ -4,6 +4,6 @@
     {\LARGE\bf Acknowledgements}
 \end{center}
 
-I am grateful to...
+I would like to thank my dissertation tutor Richard Jensen for helping throughout the project.
 
-I'd like to thank...
+I would also like to thank my parents for the support they have given me throughout my degree.
