--- a/docs/LaTeX/dissertation.tex
+++ b/docs/LaTeX/dissertation.tex
@@ -19,7 +19,9 @@
 
 % you will end up with dissertation.pdf 
 \usepackage{mmp}
-
+\usepackage{fontspec} % Provide features for AAT and OpenType fonts
+ \setmainfont{Helvetica Neue Light}
+ 
 % the following packages are used for citations - You only need to include one. 
 %
 % Use the cite package if you are using the numeric style (e.g. IEEEannot). 
