--- a/docs/LaTeX/References/references.bib
+++ b/docs/LaTeX/References/references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Neil Taylor at 2014-04-07 22:34:31 +0100 
+%% Created for Ryan Clarke at 2014-04-28 16:09:25 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,63 +11,85 @@
 @string{aij = {Artificial Intelligence}}
 
 
-@book{NumericalRecipes,
-	Annote = {This is my annotation. I can add in comments that are in \textbf{bold} and \em{italics} and then other content.},
-	Author = {Press, W.H. and others},
-	Pages = {349--361},
-	Publisher = {Cambridge University Press Cambridge},
-	Title = {{Numerical recipes in C}},
-	Year = {1992}}
-
-@inproceedings{MarksPaper,
-	Annote = {This paper...},
-	Author = {Mark Neal and Jan Feyereisl and Rosario Rascun\`{a} and Xiaolei Wang},
-	Booktitle = {Proceedings of the 5th International Conference on Artificial Immune Systems},
-	Pages = {349--361},
-	Publisher = {Springer},
-	Title = {{Don't touch me, I'm fine: Robot autonomy using an artificial innate immune system}},
-	Year = {2006}}
-
-@article{HannahsPaper,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Dee, H. M. and Hogg, D. C.},
-	Journal = aij,
-	Pages = {329-342},
-	Title = {Navigational strategies in behaviour modelling},
-	Volume = {173(2)},
-	Year = 2009}
-
-@misc{FailBlog,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Various},
-	Howpublished = {\url{http://www.failblog.org/}},
-	Month = Aug,
-	Note = {Accessed August 2011},
-	Title = {Fail Blog},
-	Year = {2011}}
-
-@misc{kittenpic_ref,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {Sylvia Duckworth},
-	Howpublished = {\url{http://www.geograph.org.uk/photo/640959}},
-	Note = {Copyright Sylvia Duckworth and licensed for reuse under a Creative Commons Attribution-Share Alike 2.0 Generic Licence. Accessed August 2011},
-	Title = {{A picture of a kitten at Hellifield Peel}},
-	Year = 2007}
-
-@url{apache_poi,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {{Apache Software Foundation}},
-	Date-Modified = {2014-04-07 21:34:28 +0000},
-	Howpublished = {\url{http://poi.apache.org}},
-	Lastchecked = {14 March 2014},
-	Title = {{Apache POI - the Java API for Microsoft Documents}},
+@url{raywender,
+	Author = {{Ray Wenderlich}},
+	Date-Added = {2014-04-28 15:08:39 +0000},
+	Date-Modified = {2014-04-28 15:09:25 +0000},
+	Howpublished = {\url{www.raywenderlich.com}},
+	Lastchecked = {28 April 2014},
+	Title = {{Ray Wenderlich | Tutorials for iPhone / iOS Developers and GamersRay Wenderlich | Tutorials for iPhone / iOS Developers and Gamers}},
 	Year = 2014}
 
-@url{apache_license,
-	Annote = {This is my annotation. I should add in a description here.},
-	Author = {{Apache Software Foundation}},
-	Date-Modified = {2014-04-07 21:32:45 +0000},
-	Howpublished = {\url{http://www.apache.org/licenses/LICENSE-2.0}},
-	Lastchecked = {14 March 2014},
-	Title = {{Apache License, Version 2.0}},
-	Year = 2004}
+@url{cocoapods,
+	Author = {{Cocoa Pods}},
+	Date-Added = {2014-04-28 13:19:00 +0000},
+	Date-Modified = {2014-04-28 13:20:09 +0000},
+	Howpublished = {\url{http://cocoapods.org/}},
+	Lastchecked = {28 April 2014},
+	Title = {{CocoaPods.org - The Dependency Manager for Objective C. }},
+	Year = 2014}
+
+@url{trello,
+	Author = {{Trello}},
+	Date-Added = {2014-04-24 21:46:26 +0000},
+	Date-Modified = {2014-04-24 21:46:48 +0000},
+	Howpublished = {\url{http://www.trello.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{Trello - Project Management}},
+	Year = 2014}
+
+@url{github,
+	Author = {{GitHub}},
+	Date-Added = {2014-04-24 21:45:50 +0000},
+	Date-Modified = {2014-04-24 21:46:22 +0000},
+	Howpublished = {\url{http://www.github.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{GitHub - Hosted GIT Server}},
+	Year = 2014}
+
+@url{theRainbow,
+	Author = {{The Rainbow Venues}},
+	Date-Added = {2014-04-24 20:44:23 +0000},
+	Date-Modified = {2014-04-24 20:45:05 +0000},
+	Howpublished = {\url{http://www.therainbowvenues.co.uk/}},
+	Lastchecked = {24 April 2014},
+	Title = {{The Rainbow Venues}},
+	Year = 2014}
+
+@url{eventStats,
+	Author = {{HBAA}},
+	Date-Added = {2014-04-24 20:43:03 +0000},
+	Date-Modified = {2014-04-24 20:43:52 +0000},
+	Howpublished = {\url{http://www.hbaa.org.uk/sites/default/files/Opportunities%20for%20Growth%20in%20the%20UK%20Events%20Industry.pdf}},
+	Lastchecked = {24 April 2014},
+	Title = {{Opportunities for Growth in the UK Events Industy}},
+	Year = 2014}
+
+@url{heroku,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Heroku}},
+	Howpublished = {\url{https://www.heroku.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{Heroku - Cloud Application Platform}},
+	Year = 2014}
+
+@url{spotnight,
+	Author = {{Spotnight}},
+	Howpublished = {\url{http://spotnightapp.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{Spotnight -Nights out in London}},
+	Year = 2014}
+
+@url{lineup,
+	Author = {{Line Up}},
+	Howpublished = {\url{http://lineupnow.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{Line Up - Events in Manchester}},
+	Year = 2014}
+
+@url{songkick,
+	Author = {{Songkick}},
+	Howpublished = {\url{http://www.songkick.com/}},
+	Lastchecked = {24 April 2014},
+	Title = {{SongKick - Concerts, tour dates, and festivals for your favorite artists}},
+	Year = 2014}
