Updated design section of the dissertation

--- a/docs/LaTeX/References/references.bib
+++ b/docs/LaTeX/References/references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Ryan Clarke at 2014-04-28 16:09:25 +0100 
+%% Created for Ryan Clarke at 2014-05-01 14:21:56 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,103 @@
 
 @string{aij = {Artificial Intelligence}}
 
+
+@url{paginate,
+	Author = {{David Celis}},
+	Date-Added = {2014-05-01 13:21:12 +0000},
+	Date-Modified = {2014-05-01 13:21:56 +0000},
+	Howpublished = {\url{https://github.com/davidcelis/api-pagination}},
+	Lastchecked = {24 April 2014},
+	Title = {{Rails API Pagination}},
+	Year = 2014}
+
+@url{WebMock,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Bartosz Blimke}},
+	Date-Added = {2014-04-30 21:44:38 +0000},
+	Date-Modified = {2014-04-30 21:45:21 +0000},
+	Howpublished = {\url{https://github.com/bblimke/webmock}},
+	Lastchecked = {24 April 2014},
+	Title = {{WebMock}},
+	Year = 2014}
+
+@url{FactoryGirl,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{thoughtbot, inc.}},
+	Date-Added = {2014-04-30 21:43:32 +0000},
+	Date-Modified = {2014-04-30 21:44:25 +0000},
+	Howpublished = {\url{https://github.com/thoughtbot/factory_girl}},
+	Lastchecked = {24 April 2014},
+	Title = {{FactoryGirl}},
+	Year = 2014}
+
+@url{RSpecRails,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{RSpec}},
+	Date-Added = {2014-04-30 21:39:42 +0000},
+	Date-Modified = {2014-04-30 21:40:27 +0000},
+	Howpublished = {\url{https://github.com/rspec/rspec-rails}},
+	Lastchecked = {24 April 2014},
+	Title = {{RSpec Package for Ruby on Rails}},
+	Year = 2014}
+
+@url{sublime,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Jon Skinner}},
+	Date-Added = {2014-04-30 21:34:51 +0000},
+	Date-Modified = {2014-04-30 21:36:22 +0000},
+	Howpublished = {\url{http://www.sublimetext.com/2}},
+	Lastchecked = {24 April 2014},
+	Title = {{Sublime Text 2}},
+	Year = 2014}
+
+@url{RDS,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Stefano Schiavi}},
+	Date-Added = {2014-04-30 21:33:17 +0000},
+	Date-Modified = {2014-04-30 21:34:06 +0000},
+	Howpublished = {\url{https://github.com/j10io/railsdev-sublime-snippets}},
+	Lastchecked = {24 April 2014},
+	Title = {{railsdev-sublime-snippets}},
+	Year = 2014}
+
+@url{RubyTest,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Maciej Gajek}},
+	Date-Added = {2014-04-30 21:31:27 +0000},
+	Date-Modified = {2014-04-30 21:32:41 +0000},
+	Howpublished = {\url{https://github.com/maltize/sublime-text-2-ruby-tests}},
+	Lastchecked = {24 April 2014},
+	Title = {{Sublime Text 2 Ruby Tests}},
+	Year = 2014}
+
+@url{RSpecSub,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Greg Williams}},
+	Date-Added = {2014-04-30 21:30:24 +0000},
+	Date-Modified = {2014-04-30 21:38:49 +0000},
+	Howpublished = {\url{https://github.com/SublimeText/RSpec}},
+	Lastchecked = {24 April 2014},
+	Title = {{RSpec Package for Sublime Text 2/3}},
+	Year = 2014}
+
+@url{schemaEvent,
+	Author = {{schema.org}},
+	Date-Added = {2014-04-29 16:25:19 +0000},
+	Date-Modified = {2014-04-29 16:26:22 +0000},
+	Howpublished = {\url{http://schema.org/Event}},
+	Lastchecked = {29 April 2014},
+	Title = {{Internationally recognised schema for events}},
+	Year = 2014}
+
+@url{facebookapi,
+	Author = {{Facebook}},
+	Date-Added = {2014-04-29 14:43:18 +0000},
+	Date-Modified = {2014-04-29 14:44:02 +0000},
+	Howpublished = {\url{https://developers.facebook.com/docs/graph-api}},
+	Lastchecked = {29 April 2014},
+	Title = {{Facebook Graph API Documentation}},
+	Year = 2014}
 
 @url{raywender,
 	Author = {{Ray Wenderlich}},
