--- a/docs/LaTeX/acknowledgements.tex
+++ b/docs/LaTeX/acknowledgements.tex
@@ -6,4 +6,6 @@
 
 I would like to thank my dissertation tutor Richard Jensen for helping throughout the project.
 
-I would also like to thank my parents for the support they have given me throughout my degree.
+I would also like to thank my family for their continued support throughout my time at university!
+
+Last but not least I would like to thank all of my friends, mainly the `Harvington household' and the `Orchard Banter House' for the support and telling me when my app `looked rubbish' and the usual `that dont work'. Cheers guys! 
