--- a/docs/LaTeX/mmp.sty
+++ b/docs/LaTeX/mmp.sty
@@ -273,7 +273,8 @@
  \vskip 0.6in
  This report was submitted as partial fulfilment of a {\@degreetype} degree in   
   {\@degreeschemetitle} ({\@degreeschemecode})
-
+\\
+\centering\mbox{\includegraphics[width=0.8\textwidth]{Images/mockup/iphone_white_angle2} }
 
 \end{minipage}
 
