Added in images and updated various chapters

--- a/docs/LaTeX/dissertation.tex
+++ b/docs/LaTeX/dissertation.tex
@@ -32,6 +32,56 @@
  \usepackage{listings}
  \usepackage{color}
 
+ \definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
+\lstdefinelanguage[Objective]{C}[GNU99]{C}
+  {morekeywords={@catch,@class,@encode,@end,@finally,@implementation,%
+      @interface,@private,@protected,@protocol,@public,@selector,%
+      @synchronized,@throw,@try,BOOL,Class,IMP,NO,Nil,SEL,YES,_cmd,%
+      bycopy,byref,id,in,inout,nil,oneway,out,self,super,%
+      % The next two lines are Objective-C 2 keywords.
+      @dynamic,@package,@property,@synthesize,readwrite,readonly,%
+      assign,retain,copy,nonatomic%
+      },%
+   moredirectives={import}%
+  }%
+
+\lstdefinelanguage[GNU99]{C}[99]{C}
+  {morekeywords={asm,__asm__,__extension__,typeof,__typeof__}%
+  }%
+
+\lstdefinelanguage[99]{C}%
+  {morekeywords={_Bool,_Complex,_Imaginary,auto,break,case,char,%
+      const,continue,default,do,double,else,enum,extern,float,for,%
+      goto,if,inline,int,long,register,restrict,return,short,signed,%
+      sizeof,static,struct,switch,typedef,union,unsigned,void,volatile,%
+      while},%
+   sensitive,%
+   morecomment=[s]{/*}{*/},%
+   morecomment=[l]//,%
+   morestring=[b]",%
+   morestring=[b]',%
+   moredelim=*[directive]\#,%
+   moredirectives={define,elif,else,endif,error,if,ifdef,ifndef,line,%
+      include,pragma,undef,warning}%
+  }[keywords,comments,strings,directives]%
+
+\lstset{
+	breaklines=true,
+	numbers=left,
+	numberstyle=\color{mygray},
+	commentstyle=\color{mygreen},
+} 
+
+\lstdefinestyle{objc} {
+	language=[Objective]C
+}
+
+\lstdefinestyle{ruby} {
+	language=ruby
+}
 \floatstyle{ruled}
 \newfloat{program}{thp}{lop}
 \floatname{program}{Example Code}
