--- a/docs/LaTeX/References/references.bib
+++ b/docs/LaTeX/References/references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Ryan Clarke at 2014-05-01 14:21:56 +0100 
+%% Created for Ryan Clarke at 2014-05-09 08:03:14 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,93 @@
 
 @string{aij = {Artificial Intelligence}}
 
+
+@url{progress,
+	Author = {{Jonathan George}},
+	Date-Added = {2014-05-09 07:02:40 +0000},
+	Date-Modified = {2014-05-09 07:03:14 +0000},
+	Howpublished = {\url{https://github.com/jdg/MBProgressHUD}},
+	Lastchecked = {24 April 2014},
+	Title = {{MBProgressHUD}},
+	Year = 2014}
+
+@url{unirest,
+	Author = {{Mashape}},
+	Date-Added = {2014-05-09 07:01:48 +0000},
+	Date-Modified = {2014-05-09 07:02:22 +0000},
+	Howpublished = {\url{https://github.com/Mashape/unirest-obj-c}},
+	Lastchecked = {24 April 2014},
+	Title = {{UniRest}},
+	Year = 2014}
+
+@url{keychain,
+	Author = {{kishikawa katsumi}},
+	Date-Added = {2014-05-09 06:59:30 +0000},
+	Date-Modified = {2014-05-09 07:00:26 +0000},
+	Howpublished = {\url{https://github.com/kishikawakatsumi/UICKeyChainStore}},
+	Lastchecked = {24 April 2014},
+	Title = {{UICKeyChainStore}},
+	Year = 2014}
+
+@url{httparty,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{John Nunemaker}},
+	Date-Added = {2014-05-09 06:57:00 +0000},
+	Date-Modified = {2014-05-09 06:58:35 +0000},
+	Howpublished = {\url{https://github.com/jnunemaker/httparty}},
+	Lastchecked = {24 April 2014},
+	Title = {{httparty}},
+	Year = 2014}
+
+@url{child,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Jari Bakken}},
+	Date-Added = {2014-05-09 06:55:11 +0000},
+	Date-Modified = {2014-05-09 06:55:43 +0000},
+	Howpublished = {\url{https://github.com/jarib/childprocess}},
+	Lastchecked = {24 April 2014},
+	Title = {{childprocess}},
+	Year = 2014}
+
+@url{spork,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{sporkrb}},
+	Date-Added = {2014-05-09 06:53:40 +0000},
+	Date-Modified = {2014-05-09 06:54:28 +0000},
+	Howpublished = {\url{https://github.com/sporkrb/spork-rails}},
+	Lastchecked = {24 April 2014},
+	Title = {{spork-rails}},
+	Year = 2014}
+
+@url{kaminari,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Akira Matsuda}},
+	Date-Added = {2014-05-09 06:46:28 +0000},
+	Date-Modified = {2014-05-09 06:47:00 +0000},
+	Howpublished = {\url{https://github.com/amatsuda/kaminari}},
+	Lastchecked = {24 April 2014},
+	Title = {{Kaminari}},
+	Year = 2014}
+
+@url{mit,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{MIT}},
+	Date-Added = {2014-05-09 06:42:59 +0000},
+	Date-Modified = {2014-05-09 06:43:25 +0000},
+	Howpublished = {\url{http://opensource.org/licenses/MIT}},
+	Lastchecked = {24 April 2014},
+	Title = {{MIT Licence}},
+	Year = 2014}
+
+@url{rails,
+	Annote = {The cloud server being used to deploy to a production ready state},
+	Author = {{Rails}},
+	Date-Added = {2014-05-09 06:41:24 +0000},
+	Date-Modified = {2014-05-09 06:41:57 +0000},
+	Howpublished = {\url{https://github.com/rails/rails}},
+	Lastchecked = {24 April 2014},
+	Title = {{Ruby on Rails}},
+	Year = 2014}
 
 @url{paginate,
 	Author = {{David Celis}},
