--- a/docs/LaTeX/dissertation.tex
+++ b/docs/LaTeX/dissertation.tex
@@ -73,6 +73,7 @@
 	numbers=left,
 	numberstyle=\color{mygray},
 	commentstyle=\color{mygreen},
+	basicstyle=\tiny
 } 
 
 \lstdefinestyle{objc} {
@@ -169,7 +170,7 @@
 
 % include any appendices here
 \include{Appendix1/appendix1}
-\include{Appendix2/appendix2}
+ \include{Appendix2/appendix2}
 
 \fancypagestyle{plain}{%
    \fancyhead{} %[C]{Annotated Bibliography}
