--- a/docs/LaTeX/Appendix1/appendix1.tex
+++ b/docs/LaTeX/Appendix1/appendix1.tex
@@ -1,13 +1,38 @@
 \chapter{Third-Party Code and Libraries}
 
-If you have made use of any third party code or software libraries, i.e. any code that you have not designed and written yourself, then you must include this appendix. 
+\section{Server side libraries}
 
-As has been said in lectures, it is acceptable and likely that you will make use of third-party code and software libraries. The key requirement is that we understand what is your original work and what work is based on that of other people. 
+Ruby on Rails is the base framework I used for my server application, RoR comes packaged with a host of other libraries all used as well. 
+\cite{mit}. The library is released using the MIT License 
+\cite{rails}. This library was used without modification. 
 
-Therefore, you need to clearly state what you have used and where the original material can be found. Also, if you have made any changes to the original versions, you must explain what you have changed. 
+The packages Kaminari and api-pagination where used to add in pagination to the project
+\cite{mit}. Both libraries is released using the MIT License 
+\cite{kaminari}. This library was used without modification. 
+\cite{paginate}. This library was used without modification. 
 
-As an example, you might include a definition such as: 
+The packages RSpec, FactoryGirl, WebMock, spork-rails, guard-spork, and childprocess where all used as part of the testing setup. 
+\cite{mit}. All libraries where released under the MIT LIcense.
+\cite{rspec}. This library was used without modification. 
+\cite{FactoryGirl}. This library was used without modification. 
+\cite{WebMock}. This library was used without modification. 
+\cite{spork}. This library was used without modification. 
+\cite{child}. This library was used without modification. 
 
-Apache POI library – The project has been used to read and write Microsoft Excel files (XLS) as part of the interaction with the client’s existing system for processing data. Version 3.10-FINAL was used. The library is open source and it is available from the Apache Software Foundation 
-\cite{apache_poi}. The library is released using the Apache License 
-\cite{apache_license}. This library was used without modification. 
+The httparty library was used to connect to external APIs
+\cite{mit}. This library where released under the MIT LIcense.
+\cite{httparty}. This library was used without modification. 
+
+\section{Mobile application libraries}
+
+UICKeyChainStore was used to store personal data using the iOS Key Chain
+\cite{mit}. This library where released under the MIT LIcense.
+\cite{keychain}. This library was used without modification. 
+
+UniRest was used to retrieve data from the API over HTTP
+\cite{mit}. This library where released under the MIT LIcense.
+\cite{unirest}. This library was used without modification. 
+
+MBProgressHUD was used to display a progress bar when undertaking certain tasks
+\cite{mit}. This library where released under the MIT LIcense.
+\cite{progress}. This library was used without modification. 
